FlightPath 6.x Changelog
========================

2022-03-20
  After noticing slowdown, added the "course inventory" code back in for now.  Looking for a better way to handle it.
  

2022-03-19
  Altered prereqs module to better explain how it's hook system works.  Added prereqs.api.php to describe hooks.
  
  Added new column to advising sessions:  most_recent_session.  This will be set to 1 (one) if this is the most recent advising session (across multiple terms)
  for the student.  Otherwise, will be zero.  This helps in certain queries and reports. 
  
  Removed code which was adding the "course inventory" to the SESSION.  This was only being used in 2 places, and never when actually loading a course.  Therefor,
  it seems it is not needed.

  Added new column to student_courses: course_id.  This makes it much easier to search for specific courses in this table.  Defaults to zero (0).
  

2022-03-17
  For menu items, if there is an icon, give it an ALT tag of whatever the title of the menu is.
  
  Made sure the logo image for FlightPath had an alt tag.
  
  Made the 'Welcome to FlightPath' message on login page use the system_name variable.

  Added new modal dialog for "loading" and "updating", which dims screen and is more visible than old method that showed
  when logging in or waiting on dialogs to save (like subs or moving courses).
  
  Cleaned up way that scrollTop was calculated for pages.  Will eventually use window.scrollY if no other method can be found.  Also, placed into system.js so it is always
  available in one spot, as function fpGetScrollTop().
  
  Made it so that if "scroll_top" is in the $_REQUEST when we submit a form, it includes that value when the form does an fp_goto and reloads.
  

2022-03-12
  Added new feature to function get_term_structures, where "term_suffix" is now one of the values returned, instead of just being
  in the key of the array.
  